--- a/index.html
+++ b/index.html
@@ -16,27 +16,29 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="container">
-        <nav>
+      <div class="container header-nav">
+        <nav class="main-nav">
           <a href="./index.html" class="logo"
             ><span class="logo-blue">Web</span
             ><span class="logo-black">Studio</span></a
           >
 
           <ul class="site-nav">
-            <li><a href="" class="link current">Студия</a></li>
-            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-            <li><a href="" class="link">Контакты</a></li>
+            <li class="item"><a href="" class="link current">Студия</a></li>
+            <li class="item">
+              <a href="./portfolio.html" class="link">Портфолио</a>
+            </li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
 
         <ul class="auth-nav">
-          <li>
+          <li class="item">
             <a href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="item">
             <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -44,7 +46,7 @@
     </header>
     <main>
       <!-- hero -->
-      <section class="hero">
+      <section class="section hero">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button type="button" class="button primery">Заказать услугу</button>
       </section>
@@ -54,28 +56,28 @@
         <div class="container">
           <h2 class="section-title">Преимущества</h2>
           <ul class="features">
-            <li>
+            <li class="item">
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Пунктуальность</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Планирование</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Современные технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -90,25 +92,25 @@
       <section class="section">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
-          <ul>
-            <li>
+          <ul class="services-list">
+            <li class="item">
               <img
                 src="./images/вставить(1).jpg"
                 alt="Человек печатает на компьютере"
                 width="370"
               />
             </li>
-            <li>
-              <img
-                src="./images/вставить(2).jpg"
-                alt="Человек смотрит в телефон"
-                width="370"
-              />
-            </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/вставить(3).jpg"
                 alt="Человек смотрит в планшет"
+                width="370"
+              />
+            </li>
+            <li class="item">
+              <img
+                src="./images/вставить(2).jpg"
+                alt="Человек смотрит в телефон"
                 width="370"
               />
             </li>
