--- a/portfolio.html
+++ b/portfolio.html
@@ -16,29 +16,29 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="container">
-        <nav>
+      <div class="container header-nav">
+        <nav class="main-nav">
           <a href="./index.html" class="logo"
             ><span class="logo-blue">Web</span
             ><span class="logo-black">Studio</span></a
           >
 
           <ul class="site-nav">
-            <li><a href="./index.html" class="link">Студия</a></li>
-            <li>
-              <a href="./portfolio.html" class="link current">Портфолио</a>
+            <li class="item"><a href="./index.html" class="link">Студия</a></li>
+            <li class="item">
+              <a href="" class="link current">Портфолио</a>
             </li>
-            <li><a href="" class="link">Контакты</a></li>
+            <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
 
         <ul class="auth-nav">
-          <li>
+          <li class="item">
             <a href="mailto:info@devstudio.com" class="link"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="item">
             <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
@@ -48,17 +48,19 @@
       <section class="section">
         <div class="container">
           <ul class="filter">
-            <li><button type="button" class="button secondary">Все</button></li>
-            <li>
+            <li class="item">
+              <button type="button" class="button secondary">Все</button>
+            </li>
+            <li class="item">
               <button type="button" class="button secondary">Веб-сайты</button>
             </li>
-            <li>
+            <li class="item">
               <button type="button" class="button secondary">Приложения</button>
             </li>
-            <li>
+            <li class="item">
               <button type="button" class="button secondary">Дизайн</button>
             </li>
-            <li>
+            <li class="item">
               <button type="button" class="button secondary">Маркетинг</button>
             </li>
           </ul>
@@ -80,7 +82,7 @@
             </li>
             <li class="item">
               <img
-                src="./images/portfolio3.jpg"
+                src="./images/portfolio9.jpg"
                 alt="текст, а на фоне рыба"
                 width="370"
               />
@@ -88,22 +90,13 @@
               <p class="text">Приложение</p>
             </li>
             <li class="item">
-              <img src="./images/portfolio4.jpg" alt="наушники" width="370" />
+              <img src="./images/portfolio8.jpg" alt="наушники" width="370" />
               <h3 class="title">Проект Prime</h3>
               <p class="text">Маркетинг</p>
             </li>
             <li class="item">
               <img
-                src="./images/portfolio3.jpg"
-                alt="текст, а на фоне рыба"
-                width="370"
-              />
-              <h3 class="title">Ресторан Seafood</h3>
-              <p class="text">Приложение</p>
-            </li>
-            <li class="item">
-              <img
-                src="./images/portfolio5.jpg"
+                src="./images/portfolio7.jpg"
                 alt="две коробки"
                 width="370"
               />
@@ -117,7 +110,7 @@
             </li>
             <li class="item">
               <img
-                src="./images/portfolio7.jpg"
+                src="./images/portfolio5.jpg"
                 alt="открытая книга"
                 width="370"
               />
@@ -126,19 +119,15 @@
             </li>
             <li class="item">
               <img
-                src="./images/portfolio8.jpg"
-                alt="бирка с текстом"
+                src="./images/portfolio4.jpg"
+                alt="ярлык с надписью"
                 width="370"
               />
               <h3 class="title">Проект LAB</h3>
               <p class="text">Маркетинг</p>
             </li>
             <li class="item">
-              <img
-                src="./images/portfolio9.jpg"
-                alt="человек печатает на ноутбуке"
-                width="370"
-              />
+              <img src="./images/portfolio3.jpg" alt="ноутбук" width="370" />
               <h3 class="title">Growing Business</h3>
               <p class="text">Приложение</p>
             </li>
